@@ -6,6 +6,7 @@ gaudi effects is a set of video effect plugins for GStreamer.
 list of GStreamer elements:
 	- chromium
 	- burn
+	- dodge
 
 
 HOW
