@@ -1,2 +1,8 @@
+2010-13-06  Luis de Bethencourt  <luis@debethencourt.com>
+	* Dodge effect added.
+
+2010-12-06  Luis de Bethencourt  <luis@debethencourt.com>
+	* Burn effect added.
+
 2010-12-06  Luis de Bethencourt  <luis@debethencourt.com>
 	* initial creation. let's start with Chromium
